# cs_pos

./: Makefile.am  README.md  autogen.sh  configure.ac  cssql.pc.in
data/: cs_pos.ui.in
src/: Makefile.am  cs_pos_main.c  cs_pos_mainwindow.c  cs_pos_widgets.c
src/common/: cs_common_console.c
src/include/: cs_pos_main.h  cs_pos_mainwindow.h  cs_pos_widgets.h
src/include/common/: cs_common_console.h
